--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ mg{
   border-radius: 12px;
 }
 .background{
-  background: rgba(0,0,0,0.7) url(img/7.jpg);
+  background: rgba(0,0,0,0.7) url(Img/7.jpg);
   background-size: cover;
   background-blend-mode: darken;
   padding: 10px;
