--- a/style.css
+++ b/style.css
@@ -135,9 +135,10 @@ padding:3px;
   
 }
 .a1-log{
-  color: #ffffff;
-  padding-left: 75px;
-  font-size: 24px;
+  /* color: white; */
+  color: var(--bbQxAb);
+  margin-left: 10px;
+  font-size: 20px;
 }
 .notw{
  padding-right:80px;
