--- a/style.css
+++ b/style.css
@@ -8,9 +8,15 @@ mg{
   margin:0px;
   padding: 0px;
   font-family: 'Roboto', sans-serif;
+  color: wheat;
 }
 .hi{
   height: 60px;
+}
+.footer{
+  border-top:1px solid white;
+  background-color:black;
+  padding: 25px;
 }
 .home{
   position: sticky; 
@@ -48,7 +54,6 @@ mg{
 }
 .home li a{
   text-decoration:none;
-  color: white;
   font-size: 15px;
 }
 #name{
@@ -90,7 +95,6 @@ mg{
 .prince:hover{
   color: green;
 }
-
 .login{
 text-decoration:none; 
 font-size:25px;  
@@ -100,16 +104,9 @@ border:3px #426bd7;
 border-radius:13px; 
 padding:3px;
 }
-.condition{
- background-color:black;
- padding: 40px;
-}
-.bottom{
-  text-decoration:none;
-  color:#FFFFFF;
-  text-align: center;
-  font-size: 20px;
-  margin-top:20px;
+.copysymbol{
+  margin-left: 68%;
+  font-size: 14px;
 }
 .h1text{
   margin-bottom:20px;
@@ -151,20 +148,18 @@ padding:3px;
      background-color: white;
 }
  .title{
-    padding-top: 5px;
-    text-align:center;
-    font-size:35px;
+  font-weight: bold;
+  text-align:center;
+  font-size:30px;
 }
-
 .terms{
-  color:#808080;
-  font-size:22px;
-
+  margin-left: 10px;
+  text-decoration:none;
+  font-size:18px;
 }
 .terms:hover{
   color: #808080;
-  text-decoration:none;
-  font-size: 22px;
+  text-decoration:underline;
 }
 .op{
  opacity: 00;
