--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Cabin:ital@1&family=Roboto&display=swap');
-
 mg{
   height:100px;
   width: 100px;
@@ -10,22 +9,21 @@ mg{
   font-family: 'Roboto', sans-serif;
   color: wheat;
 }
-.hi{
+.navclss{
+  background: rgba(0,0,0,0.7) url(Img/7.jpg);
+  background-size: cover;
+  background-blend-mode: darken;
+  padding: 10px;
   height: 60px;
+  position: sticky; 
+  top:0;
+  text-align:center;
 }
 .footer{
   border-top:1px solid white;
   background-color:black;
   padding: 25px;
-}
-.home{
-  position: sticky; 
-  top:0;
-  text-align:center;
-}
-.name{
- display: flex;
- margin: auto;
+ text-align: center;
 }
 .right {
   width: 100%;
@@ -41,18 +39,23 @@ mg{
   border: 2px solid white;
   border-radius: 50px;
 }
-.home li{
+.navclss ul{
+  display: flex;
+  margin: auto;
+ 
+}
+.navclss li{
   list-style:none;
   padding: 20px 45px;
   color: black;
 }
-.home li a:hover{
+.navclss li a:hover{
      background-color: white;
      color: black;
      border: 2px solid white;
      border-radius: 8px;
 }
-.home li a{
+.navclss li a{
   text-decoration:none;
   font-size: 15px;
 }
@@ -62,15 +65,14 @@ mg{
   border: 2px solid gray;
   border-radius: 12px;
 }
-.background{
+.section-style{
   background: rgba(0,0,0,0.7) url(Img/7.jpg);
   background-size: cover;
   background-blend-mode: darken;
   padding: 10px;
-}
-.pp{
-    display: flex;
-    height: 100vh;
+  text-align: center; 
+  height: 100vh;
+  font-size: 20px;
 }
 .f{
   width: 80%;
@@ -82,9 +84,6 @@ mg{
 }
 .font{
   font-size:40px;
-}
-.fohis{
-  font-size:35px;
 }
 .prince{
   height: 25px;
@@ -129,7 +128,6 @@ padding:3px;
   color: black;
   background-color: white;
   font-size: 28px;
-  
 }
 .a1-log{
   /* color: white; */
@@ -151,12 +149,6 @@ padding:3px;
 }
 .log-button:hover{
   background-color: #008CBA;
-
-}
- .title{
-  font-weight: bold;
-  text-align:center;
-  font-size:30px;
 }
 .terms{
   margin-left: 10px;
