--- a/style.css
+++ b/style.css
@@ -24,25 +24,23 @@ mg{
   background-color:black;
   padding: 25px;
  text-align: center;
+ font-size: 15px;
 }
 .right {
   width: 100%;
   text-align: right;
   margin-top: 25px;
 }
-.logo{
-  margin-left: 15px;
-}
 .logo img{
   width: 50px;
   height: 50px;
   border: 2px solid white;
   border-radius: 50px;
+  margin-left: 15px;
 }
 .navclss ul{
   display: flex;
   margin: auto;
- 
 }
 .navclss li{
   list-style:none;
@@ -103,26 +101,22 @@ border:3px #426bd7;
 border-radius:13px; 
 padding:3px;
 }
-.copysymbol{
-  margin-left: 68%;
-  font-size: 14px;
-}
 .h1text{
   margin-bottom:20px;
   margin-left: 60px;
   font-size:50px;
 }
-.text-box{
+/* .text-box{
   margin-left: 350px;
   margin-top: 140px;
   height:90vh;
 }
 .text-box input{
    font-size: 23px;
-}
-.serv{
+} */
+/* .serv{
  height:100vh;
-}
+} */
 .a-login{
   text-decoration: none;
   color: black;
@@ -150,22 +144,8 @@ padding:3px;
 .log-button:hover{
   background-color: #008CBA;
 }
-.terms{
-  margin-left: 10px;
-  text-decoration:none;
-  font-size:18px;
-}
-.terms:hover{
-  color: #808080;
-  text-decoration:underline;
-}
 .op{
  opacity: 00;
-}
-.about_text{
-  text-align: center;
-  margin-top: 70px;
-  font-size: 20px;
 }
 .log_in_text-box{
   border: 1px solid black;
